--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
   <meta charset="utf-8">
   <title>Modular Nav</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/type.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+</head>
 <body>
+  <header class="grid">
+    <div class="unit xs-1 s-1 m-1-3 l-1-2">
+      <h1 class="exa pad-t push-none">Solar System</h1>
+    </div>
+    <nav class="unit xs-1 s-1 m-2-3 l-1-2 grid-middle">
+      <ul class="giga p-b-1-4 pad-t">
+        <li><a class="island-1-2" href="planets.asp">Planets</a></li>
+        <li><a class="island-1-2" href="moons.asp">Moons</a></li>
+        <li><a class="island-1-2" href="exploration.asp">Exploration</a></li>
+      </ul>
+    </nav>
+  </header>
+</body>
+</html>
